--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "helmet": "^6.0.1",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
