--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "helmet": "^6.0.1",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
