--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "notistack": "^3.0.1",
